# agente-mercado

agente-mercado/: CLAUDE.md  Dockerfile  pyproject.toml
agente-mercado/app/: config.py  main.py
agente-mercado/app/api/: routes.py  schemas.py
agente-mercado/app/broker/: __init__.py  base.py  capital.py  models.py  oanda.py
agente-mercado/app/core/: orchestrator.py  scheduler.py
agente-mercado/app/db/: models.py  system_config.py
agente-mercado/app/forex/: __init__.py  instruments.py  sessions.py
agente-mercado/app/llm/: base.py  gemini.py
agente-mercado/app/services/: macro_regime.py
agente-mercado/app/signals/: context_filters.py  entry_patterns.py  indicators.py  market_state.py  pullback_detector.py  rule_engine.py
agente-mercado/app/signals/bollinger/: __init__.py  signal_engine.py
agente-mercado/app/signals/connors/: __init__.py  indicators.py  signal_engine.py
agente-mercado/app/signals/double_ema/: __init__.py  signal_engine.py
agente-mercado/app/signals/ema_crossover/: __init__.py  signal_engine.py
agente-mercado/app/signals/momentum_breakout/: __init__.py  signal_engine.py
agente-mercado/app/signals/pullback_m5/: __init__.py  signal_engine.py
agente-mercado/app/signals/rsi_ema/: __init__.py  signal_engine.py
agente-mercado/app/signals/session_breakout/: __init__.py  signal_engine.py
agente-mercado/app/signals/smc/: signal_engine.py
agente-mercado/app/signals/turtle/: __init__.py  donchian.py  (+1 more)
agente-mercado/app/strategies/: registry.py
agente-mercado/app/trading/: tracker.py
agente-mercado/scripts/: seed_strategies.py
(+43 files in other folders)
