[project]
name = "agente-mercado"
version = "0.1.0"
description = "Agente autónomo de trading cuantitativo con IA"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    # Cache
    "redis[hiredis]>=5.2.0",
    # HTTP client (OANDA broker)
    "httpx>=0.28.0",
    # Scheduling
    "apscheduler>=3.10.4",
    # Configuration
    "pydantic-settings>=2.7.0",
    # Auth
    "pyjwt>=2.10.0",
    "passlib[bcrypt]>=1.7.4",
    # Metrics
    "prometheus-client>=0.21.0",
    # Data analysis
    "pandas>=2.2.0",
    "numpy>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx",  # for TestClient
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100
